Authentication implemented for Login and Sign Up (without associated popups/warnings/etc). Sign Out implemented.

--- a/Loop/Base.lproj/Main.storyboard
+++ b/Loop/Base.lproj/Main.storyboard
@@ -165,7 +165,7 @@
                                             </constraint>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
+                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="u8o-zq-P5c"/>
@@ -12012,12 +12012,12 @@ for the game of golf.</string>
                         <outlet property="confirmEmailTextField" destination="2kg-V8-vB5" id="Cbd-h6-T2K"/>
                         <outlet property="emailTextField" destination="qBq-nN-fdm" id="FG9-9L-4UK"/>
                         <outlet property="phoneTextField" destination="bON-NL-JoB" id="3Bn-sH-2da"/>
-                        <segue destination="50h-9o-pBg" kind="show" identifier="toProfilePictureSignUpSegue" id="aIV-9b-HgA"/>
+                        <segue destination="fOI-Fp-Gbg" kind="show" identifier="toSignUpPrivateCoursesSegue" id="CSS-mP-0qB"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j5P-tY-2fe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2200.5" y="1973"/>
+            <point key="canvasLocation" x="-1509" y="713"/>
         </scene>
         <!--Sign Up Profile Picture View Controller-->
         <scene sceneID="xbL-Ge-evW">
@@ -12031,7 +12031,7 @@ for the game of golf.</string>
                             <tableViewSection id="oS0-p5-cWO">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="140" id="IW1-5F-bdK">
-                                        <rect key="frame" x="0.0" y="99" width="600" height="140"/>
+                                        <rect key="frame" x="0.0" y="35" width="600" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IW1-5F-bdK" id="An6-jw-mKf">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="139"/>
@@ -12111,7 +12111,7 @@ for the game of golf.</string>
                             <tableViewSection id="la8-18-NSO">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="zqv-Pd-fw7">
-                                        <rect key="frame" x="0.0" y="275" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="211" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zqv-Pd-fw7" id="aNy-e4-K72">
                                             <rect key="frame" x="0.0" y="0.0" width="567" height="43"/>
@@ -12149,9 +12149,6 @@ for the game of golf.</string>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="fOI-Fp-Gbg" kind="show" id="UmK-Br-06E"/>
-                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -12169,7 +12166,7 @@ for the game of golf.</string>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LC8-yo-fq8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1432.5" y="713"/>
+            <point key="canvasLocation" x="-2409" y="809"/>
         </scene>
         <!--Sign Up Choose Private Courses View Controller-->
         <scene sceneID="f89-ka-kci">
@@ -12467,7 +12464,7 @@ for the game of golf.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <sections>
-                            <tableViewSection headerTitle="" id="A5e-vs-rK2">
+                            <tableViewSection headerTitle="" footerTitle="Your password must be 6 characters or more." id="A5e-vs-rK2">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="vGu-tq-tPy">
                                         <rect key="frame" x="0.0" y="99" width="600" height="44"/>
@@ -12485,7 +12482,7 @@ for the game of golf.</string>
                                                     </constraints>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
+                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next" secureTextEntry="YES"/>
                                                     <variation key="default">
                                                         <mask key="constraints">
                                                             <exclude reference="eTB-GV-Egs"/>
@@ -12548,7 +12545,7 @@ for the game of golf.</string>
                                                     </constraints>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
+                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done" secureTextEntry="YES"/>
                                                     <variation key="default">
                                                         <mask key="constraints">
                                                             <exclude reference="dfS-lJ-3R7"/>
@@ -12600,7 +12597,7 @@ for the game of golf.</string>
                             <tableViewSection footerTitle="" id="vbW-4y-rB8">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="qRf-9m-GDg">
-                                        <rect key="frame" x="0.0" y="223" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="232" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qRf-9m-GDg" id="6w1-rD-CCg">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
@@ -13131,13 +13128,13 @@ for the game of golf.</string>
                                 <exclude reference="VDB-P4-ZBY"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="cyE-Y1-4fe"/>
+                                <exclude reference="tWs-mU-1NM"/>
+                                <exclude reference="y5Z-t8-yWy"/>
                                 <exclude reference="4jp-ax-dFE"/>
                                 <exclude reference="NLo-rP-1Fe"/>
                                 <exclude reference="NoI-bp-51P"/>
                                 <exclude reference="bhi-rg-crT"/>
-                                <exclude reference="cyE-Y1-4fe"/>
-                                <exclude reference="tWs-mU-1NM"/>
-                                <exclude reference="y5Z-t8-yWy"/>
                                 <exclude reference="5U4-f5-q3Z"/>
                                 <exclude reference="97z-IV-jI1"/>
                                 <exclude reference="QRy-An-FEa"/>
@@ -13155,13 +13152,13 @@ for the game of golf.</string>
                                 <include reference="VDB-P4-ZBY"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="cyE-Y1-4fe"/>
+                                <include reference="tWs-mU-1NM"/>
+                                <exclude reference="y5Z-t8-yWy"/>
                                 <exclude reference="4jp-ax-dFE"/>
                                 <exclude reference="NLo-rP-1Fe"/>
                                 <include reference="NoI-bp-51P"/>
                                 <exclude reference="bhi-rg-crT"/>
-                                <include reference="cyE-Y1-4fe"/>
-                                <include reference="tWs-mU-1NM"/>
-                                <exclude reference="y5Z-t8-yWy"/>
                                 <include reference="5U4-f5-q3Z"/>
                                 <include reference="97z-IV-jI1"/>
                                 <exclude reference="QRy-An-FEa"/>
