--- a/Loop/Base.lproj/Main.storyboard
+++ b/Loop/Base.lproj/Main.storyboard
@@ -2021,7 +2021,7 @@ deserves a caddie.</string>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Golf Course Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3C-6n-ikn">
-                                            <rect key="frame" x="28" y="43" width="308" height="20"/>
+                                            <rect key="frame" x="28" y="43" width="302" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="tQt-8x-8nE"/>
                                             </constraints>
@@ -2048,11 +2048,11 @@ deserves a caddie.</string>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PENDING" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LFa-hp-3HT">
-                                            <rect key="frame" x="346" y="50" width="64" height="20"/>
+                                            <rect key="frame" x="340" y="50" width="70" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="T10-jR-bxB"/>
                                                 <constraint firstAttribute="width" constant="40" id="bZi-ij-pB5"/>
-                                                <constraint firstAttribute="width" constant="64" id="ser-vy-a4e"/>
+                                                <constraint firstAttribute="width" constant="70" id="ser-vy-a4e"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="12"/>
                                             <color key="textColor" red="1" green="0.78560980243161083" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -3225,7 +3225,7 @@ for the game of golf.</string>
                             </tableViewSection>
                             <tableViewSection headerTitle="" id="6ry-Va-kdK">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="276" id="5vQ-2T-gaE" customClass="CaddieHistoryCell" customModule="Loop" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="276" id="5vQ-2T-gaE">
                                         <rect key="frame" x="0.0" y="201" width="400" height="276"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5vQ-2T-gaE" id="TeH-bk-Sau">
