--- a/Loop/Base.lproj/Main.storyboard
+++ b/Loop/Base.lproj/Main.storyboard
@@ -764,6 +764,10 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mOP-jQ-4D7">
+                                <rect key="frame" x="360" y="0.0" width="240" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -850,7 +854,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cCQ-18-VEY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1957.5" y="-339"/>
+            <point key="canvasLocation" x="1957" y="-339"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -3144,15 +3148,9 @@ for the game of golf.</string>
                                                     <rect key="frame" x="81" y="116" width="238" height="30"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="5JC-8v-iMr"/>
-                                                        <constraint firstAttribute="width" constant="260" id="jk2-dc-phO"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                                     <state key="normal" title="Send a reminder to this caddie"/>
-                                                    <variation key="default">
-                                                        <mask key="constraints">
-                                                            <exclude reference="jk2-dc-phO"/>
-                                                        </mask>
-                                                    </variation>
                                                     <connections>
                                                         <action selector="requestStatusBannerButtonPressed:" destination="GNw-WM-Ly5" eventType="touchUpInside" id="k1A-Ia-VjD"/>
                                                     </connections>
@@ -3176,7 +3174,7 @@ for the game of golf.</string>
                             </tableViewSection>
                             <tableViewSection headerTitle="" id="6ry-Va-kdK">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="195" id="hkA-rO-Wmx" customClass="CaddieHistoryCell" customModule="Loop" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="195" id="hkA-rO-Wmx">
                                         <rect key="frame" x="0.0" y="231" width="400" height="195"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hkA-rO-Wmx" id="GfL-lv-9S4">
@@ -15443,7 +15441,7 @@ The 10% fee that you are charged when the caddie confirms the reservation will r
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="276" id="aul-tx-IAG" customClass="CaddieHistoryCell" customModule="Loop" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="276" id="aul-tx-IAG">
                                         <rect key="frame" x="0.0" y="120" width="280" height="276"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aul-tx-IAG" id="1rB-bB-1EO">
@@ -15800,8 +15798,12 @@ The 10% fee that you are charged when the caddie confirms the reservation will r
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="280" height="800"/>
                     <connections>
+                        <outlet property="caddieMembershipHistoryLabel" destination="qW6-YH-KsJ" id="gla-mk-pJ5"/>
+                        <outlet property="caddieNameLabel" destination="rSW-QE-GkH" id="iGG-7W-i32"/>
                         <outlet property="caddieProfessionalComplaintCell" destination="eGk-H9-5Ri" id="1dR-jj-tRl"/>
                         <outlet property="caddieProfileImageView" destination="ZvW-wp-6M5" id="8BB-mW-5Bo"/>
+                        <outlet property="golfCourseLocationLabel" destination="a6I-qj-RiZ" id="1Uw-FE-dUk"/>
+                        <outlet property="golfCourseNameLabel" destination="Odz-n9-nJh" id="xil-4s-hdv"/>
                         <outlet property="lateCaddieCell" destination="njN-gi-evR" id="bt9-xs-uCT"/>
                         <outlet property="loopContactRequestCell" destination="UQF-Ze-lA5" id="IxZ-it-xkA"/>
                     </connections>
@@ -18187,7 +18189,7 @@ If you've got a promo code, enter it here.</string>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="NuT-g2-ifw"/>
                                                     </constraints>
-                                                    <string key="text">Your Loop round starts within the hour, so you can now view this reservation as a Loop In Progress from the home screen. Happy golfing!</string>
+                                                    <string key="text">Your Loop round starts within the hour or is currently ongoing, so you can now view this reservation as a Loop In Progress from the home screen.</string>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
